@@ -1,6 +1,6 @@
 {
   "name": "simp-freeradius",
-  "version": "8.1.0",
+  "version": "8.1.1",
   "author": "SIMP Team",
   "summary": "manages FreeRADIUS authentication servers",
   "license": "Apache-2.0",
@@ -43,6 +43,13 @@
     },
     {
       "operatingsystem": "RedHat",
+      "operatingsystemrelease": [
+        "7",
+        "8"
+      ]
+    },
+    {
+      "operatingsystem": "OracleLinux",
       "operatingsystemrelease": [
         "7",
         "8"
