@@ -1,3 +1,6 @@
+* Wed Sep 16 2020 Liz Nemsick <lnemsick.simp@gmail.com> - 8.1.1-0
+- Advertise OEL support in the metadata.json.
+
 * Tue Mar 31 2020 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.1.0-0
   - Fix missing `group_filter` option in LDAP
   - Add support for overriding post-auth in LDAP
